--- a/package.json
+++ b/package.json
@@ -7,16 +7,14 @@
     "node": "20"
   },
   "scripts": {
-    "dev": "next dev --turbopack -p 9003",
+    "dev": "next dev",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build:functions": "tsc -p tsconfig.functions.json",
-    "build": "react-scripts build",
-    "start": "react-scripts start",
+    "build": "next build",
+    "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@firebasegen/default-connector": "file:dataconnect-generated/js/default-connector",
